test/parser/Queries/syntax_errors/fail_K-ForExprWithout-48.xq
(:*************** let ************ for ******foo*foo*****foo****foo*** where ** let **:
(: where  Test:    foo                 let        $    :)
(: Written by: Frans Englich  where   foo where                 where     foo      :)
(: Date: 2006-10-05T18:29:37+02:00        $          for        ne  ne   :
(: Purpose: Parser test: variable namesin a forexpression  only exist of one  let character are  :)
(:****** ne *************** for ******************* for *************:
1 eq ne   ne (for $a in 1 return a where )